crud Updating swagger documentation.
