# backend/docs/swagger.json
@@ -64,6 +64,15 @@
                     "account"
                 ],
                 "summary": "get account",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -72,9 +81,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/account/{id}/": {
+            },
             "patch": {
                 "security": [
                     {
